--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="ZLink"
+APP_NAME="ZTech Institute"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -7,7 +7,7 @@ NOVA_GOOGLE_AUTOCOMPLETE_API_KEY=""
 NOVA_TWO_FA_ENABLE=true
 NOVA_DOCUMENTATION_PARSER=yaml
 NOVA_GOOGLE_POLYGON_API_KEY=
-FRONTEND_URL=''
+FRONTEND_URL='http://localhost:3000'
 FRONTEND_URL_PROD=''
 
 LOG_CHANNEL=stack
@@ -21,7 +21,7 @@ DEBUGBAR_ENABLED=false
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel_personal_zlink-backend-v1
+DB_DATABASE=laravel_personal_ztech-backend-v1
 DB_USERNAME=root
 DB_PASSWORD=
 
